--- a/build.gradle
+++ b/build.gradle
@@ -364,8 +364,17 @@ task packageLinux32(dependsOn: buildLinux32) << {
         from("scripts/rpm/systemd") {
             include "opendct.service"
             into "/etc/systemd/system"
-            fileMode 0664
-            addParentDirs false
+            fileMode = 0664
+            addParentDirs = false
+            user = "root"
+            permissionGroup = "root"
+        }
+
+        from('scripts/rpm/firewalld') {
+            include 'opendct.xml'
+            into '/etc/firewalld/services'
+            fileMode = 0640
+            addParentDirs = false
             user = "root"
             permissionGroup = "root"
         }
@@ -391,6 +400,11 @@ task packageLinux32(dependsOn: buildLinux32) << {
             into 'lib'
         }
 
+        from('scripts/deb/ufw') {
+            into ''
+            fileMode 0755
+        }
+
         preInstall file('scripts/deb/preInstall.sh')
         postInstall file('scripts/deb/postInstall.sh')
         preUninstall file('scripts/deb/preUninstall.sh')
@@ -412,8 +426,17 @@ task packageLinux64(dependsOn: buildLinux64) << {
         from("scripts/rpm/systemd") {
             include "opendct.service"
             into "/usr/lib/systemd/system"
-            fileMode 0664
-            addParentDirs false
+            fileMode = 0664
+            addParentDirs = false
+            user = "root"
+            permissionGroup = "root"
+        }
+
+        from('scripts/rpm/firewalld') {
+            include 'opendct.xml'
+            into '/etc/firewalld/services'
+            fileMode = 0640
+            addParentDirs = false
             user = "root"
             permissionGroup = "root"
         }
@@ -437,6 +460,11 @@ task packageLinux64(dependsOn: buildLinux64) << {
 
         from(configurations.linux_x86_64) {
             into 'lib'
+        }
+
+        from('scripts/deb/ufw') {
+            into ''
+            fileMode 0755
         }
 
         preInstall file('scripts/deb/preInstall.sh')
