--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@
  */
 
 import org.gradle.internal.os.OperatingSystem
+import org.apache.tools.ant.filters.*
 
 plugins {
     id "nebula.os-package" version "2.2.6"
@@ -177,13 +178,25 @@ ospackage {
 
     from('build/jsw') {
         include 'conf/*'
-        include 'doc/*'
         include 'lib/*'
         into 'jsw'
     }
 
     from('build/jsw') {
-        include 'bin/*'
+        include 'doc/*'
+        into 'jsw'
+
+    }
+
+    from('build/jsw') {
+        include 'bin/sh.script.in'
+        into 'jsw'
+        fileMode 0755
+        filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
+    }
+
+    from('build/jsw') {
+        include 'bin/wrapper'
         into 'jsw'
         fileMode 0755
     }
@@ -192,12 +205,14 @@ ospackage {
         include '*'
         into ''
         fileMode 0550
+        filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
     }
 
     from('distribution') {
         include 'LICENSE'
         include 'licenses/*'
         into ''
+        filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
     }
 }
 
@@ -373,6 +388,7 @@ task packageLinux32(dependsOn: buildLinux32) << {
             addParentDirs = false
             user = "root"
             permissionGroup = "root"
+            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
         }
 
         from('scripts/rpm/firewalld') {
@@ -382,6 +398,7 @@ task packageLinux32(dependsOn: buildLinux32) << {
             addParentDirs = false
             user = "root"
             permissionGroup = "root"
+            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
         }
 
         into linuxInstallPath
@@ -408,6 +425,7 @@ task packageLinux32(dependsOn: buildLinux32) << {
         from('scripts/deb/ufw') {
             into ''
             fileMode 0755
+            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
         }
 
         preInstall file('scripts/deb/preInstall.sh')
@@ -435,6 +453,7 @@ task packageLinux64(dependsOn: buildLinux64) << {
             addParentDirs = false
             user = "root"
             permissionGroup = "root"
+            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
         }
 
         from('scripts/rpm/firewalld') {
@@ -444,6 +463,7 @@ task packageLinux64(dependsOn: buildLinux64) << {
             addParentDirs = false
             user = "root"
             permissionGroup = "root"
+            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
         }
 
         into linuxInstallPath
@@ -470,6 +490,7 @@ task packageLinux64(dependsOn: buildLinux64) << {
         from('scripts/deb/ufw') {
             into ''
             fileMode 0755
+            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
         }
 
         preInstall file('scripts/deb/preInstall.sh')
