--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -4,3 +4,5 @@ sagetv.device.global.only_devices_csv=
 sagetv.device.global.required_devices_loaded_count=0
 sagetv.device.global.required_devices_loaded_timeout_ms=30000
 sagetv.new.default_consumer_impl=opendct.consumer.FFmpegSageTVConsumerImpl
+upnp.service.configuration.ignore_interfaces_csv=
+upnp.service.configuration.ignore_local_ip_csv=
