--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ ext {
 	ffmpegVersion = '2.8.1-1.1'
 	log4jVersion = '2.5'
     jnaVersion = '4.2.1'
+    jettyVersion = '9.3.6.v20151106'
 
 	versionText = new File('src/main/java/opendct/config/Config.java').text
     majorVersion = (versionText =~ /VERSION_MAJOR = ([0-9]+)/)[0][1]
@@ -85,6 +86,9 @@ dependencies {
 	compile "net.java.dev.jna:jna:${jnaVersion}"
 	compile "net.java.dev.jna:jna-platform:${jnaVersion}"
 	compile "org.bytedeco.javacpp-presets:ffmpeg:${ffmpegVersion}"
+    compile "org.eclipse.jetty:jetty-server:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-runner:${jettyVersion}"
 
 	windows_x86 "org.bytedeco.javacpp-presets:ffmpeg:${ffmpegVersion}:windows-x86"
 	windows_x86 configurations.compile
