--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Main</servlet-name>
-        <url-pattern>/sagetvmanager</url-pattern>
+        <url-pattern>/sagetvmanager/*</url-pattern>
     </servlet-mapping>
 </web-app>
