--- a/jsw/windows-x86/conf/wrapper.conf
+++ b/jsw/windows-x86/conf/wrapper.conf
@@ -70,6 +70,7 @@ wrapper.app.parameter.1=opendct.Main
 wrapper.app.parameter.2=--daemon
 wrapper.app.parameter.3=--config-dir=%CONFIG_HOME%
 wrapper.app.parameter.4=--log-to-console=false
+wrapper.app.parameter.5=--jetty-dir=%OPENDCT_HOME%/webapps/opendct
 
 #********************************************************************
 # Wrapper Logging Properties
