Added JSON getter objects.

--- a/src/main/webapps/opendct/WEB-INF/web.xml
+++ b/src/main/webapps/opendct/WEB-INF/web.xml
@@ -13,12 +13,24 @@
         <url-pattern>/opendct</url-pattern>
     </servlet-mapping>
     <servlet>
-        <servlet-name>Json</servlet-name>
-        <servlet-class>opendct.jetty.json.JsonServlet</servlet-class>
+        <servlet-name>Jersey</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>opendct.jetty.rest</param-value>
+        </init-param>
+        <init-param>
+            <param-name>jersey.config.server.provider.scanning.recursive</param-name>
+            <param-value>false</param-value>
+        </init-param>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Json</servlet-name>
-        <url-pattern>/opendct/json</url-pattern>
+        <servlet-name>Jersey</servlet-name>
+        <url-pattern>/opendct/rest/*</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>SageTVManager</servlet-name>
