--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ ext {
 	log4jVersion = '2.5'
     jnaVersion = '4.2.1'
     jettyVersion = '9.3.6.v20151106'
+    jerseyVersion = '2.22.1'
 
 	versionText = new File('src/main/java/opendct/config/Config.java').text
     majorVersion = (versionText =~ /VERSION_MAJOR = ([0-9]+)/)[0][1]
@@ -89,9 +90,12 @@ dependencies {
     compile "org.eclipse.jetty:jetty-server:${jettyVersion}"
     compile "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
     compile "org.eclipse.jetty:jetty-runner:${jettyVersion}"
-    compile 'com.fasterxml.jackson.core:jackson-core:2.6.4'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.4'
-
+    //compile 'com.fasterxml.jackson.core:jackson-core:2.6.4'
+    //compile 'com.fasterxml.jackson.core:jackson-databind:2.6.4'
+    compile "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
+    compile "org.glassfish.jersey.containers:jersey-container-servlet:${jerseyVersion}"
+    compile "org.glassfish.jersey.media:jersey-media-json-jackson:${jerseyVersion}"
+    compile "org.glassfish.jersey.core:jersey-client:${jerseyVersion}"
 
     windows_x86 "org.bytedeco.javacpp-presets:ffmpeg:${ffmpegVersion}:windows-x86"
 	windows_x86 configurations.compile
