--- a/src/main/webapps/opendct/WEB-INF/web.xml
+++ b/src/main/webapps/opendct/WEB-INF/web.xml
@@ -5,14 +5,6 @@
         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
         version="2.5">
     <servlet>
-        <servlet-name>Main</servlet-name>
-        <servlet-class>opendct.jetty.MainServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Main</servlet-name>
-        <url-pattern>/opendct</url-pattern>
-    </servlet-mapping>
-    <servlet>
         <servlet-name>Jersey</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
@@ -30,14 +22,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Jersey</servlet-name>
-        <url-pattern>/opendct/rest/*</url-pattern>
-    </servlet-mapping>
-    <servlet>
-        <servlet-name>SageTVManager</servlet-name>
-        <servlet-class>opendct.jetty.SageTVManagerServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SageTVManager</servlet-name>
-        <url-pattern>/opendct/sagetvmanager</url-pattern>
+        <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
 </web-app>
