--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ ext {
     jnaVersion = '4.2.1'
     jettyVersion = '9.3.6.v20151106'
     jerseyVersion = '2.22.1'
+    jacksonVersion = '2.6.4'
 
 	versionText = new File('src/main/java/opendct/config/Config.java').text
     majorVersion = (versionText =~ /VERSION_MAJOR = ([0-9]+)/)[0][1]
@@ -91,8 +92,10 @@ dependencies {
     compile "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
     compile "org.eclipse.jetty:jetty-runner:${jettyVersion}"
     compile "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
-    compile "org.glassfish.jersey.containers:jersey-container-servlet:${jerseyVersion}"
     compile "org.glassfish.jersey.core:jersey-client:${jerseyVersion}"
+    compile "org.glassfish.jersey.containers:jersey-container-servlet:${jerseyVersion}"
+    compile "org.glassfish.jersey.media:jersey-media-json-jackson:${jerseyVersion}"
+    compile "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
 
     windows_x86 "org.bytedeco.javacpp-presets:ffmpeg:${ffmpegVersion}:windows-x86"
 	windows_x86 configurations.compile
