--- a/src/main/webapps/opendct/WEB-INF/web.xml
+++ b/src/main/webapps/opendct/WEB-INF/web.xml
@@ -5,7 +5,7 @@
         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
         version="2.5">
     <servlet>
-        <servlet-name>Jersey</servlet-name>
+        <servlet-name>jersey</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.disableMoxyJson.server</param-name>
@@ -25,7 +25,7 @@
         </init-param>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Jersey</servlet-name>
+        <servlet-name>jersey</servlet-name>
         <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
 </web-app>
