--- a/build.gradle
+++ b/build.gradle
@@ -532,7 +532,7 @@ bintray {
     dryRun = false //Whether to run this as dry-run, without deploying
     publish = true //If version should be auto published after an upload
     pkg {
-        repo = 'Releases'
+        repo = 'Testing'
         name = 'OpenDCT'
         userOrg = 'opendct'
         desc = "OpenDCT Release"
