--- a/jsw/windows-x86_64/conf/wrapper.conf
+++ b/jsw/windows-x86_64/conf/wrapper.conf
@@ -164,3 +164,8 @@ wrapper.java.pidfile=%CONFIG_HOME%/opendct-pid.txt
 # Stop the service if the JVM exits with exit code 0 otherwise restart the JVM.
 wrapper.on_exit.default=RESTART
 wrapper.on_exit.0=SHUTDOWN
+wrapper.on_exit.1=SHUTDOWN
+wrapper.on_exit.2=SHUTDOWN
+wrapper.on_exit.3=SHUTDOWN
+wrapper.on_exit.4=SHUTDOWN
+wrapper.on_exit.6=SHUTDOWN
