Changed back to beta, added junit testing.

--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ ext {
     majorVersion = (versionText =~ /VERSION_MAJOR = ([0-9]+)/)[0][1]
     minorVersion = (versionText =~ /VERSION_MINOR = ([0-9]+)/)[0][1]
     buildVersion = (versionText =~ /VERSION_BUILD = ([0-9]+)/)[0][1]
-    buildType = "Alpha"
+    buildType = "Beta"
 
     javaVersion = '1.7'
     buildVersion = "${majorVersion}.${minorVersion}.${buildVersion}"
@@ -75,6 +75,8 @@ configurations {
 }
 
 dependencies {
+    testCompile 'junit:junit:4.12'
+
     compile fileTree(dir: 'lib', include: ['*.jar'])
     compile 'org.seamless:seamless-http:1.1.0'
 	compile 'org.seamless:seamless-util:1.1.0'
