--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ import org.gradle.internal.os.OperatingSystem
 import org.apache.tools.ant.filters.*
 
 plugins {
-    id "nebula.os-package" version "2.2.6"
+    id "nebula.ospackage" version "3.3.0"
     id "com.jfrog.bintray" version "1.4"
 }
 
@@ -164,10 +164,19 @@ ospackage {
     user = linuxUser
     permissionGroup = linuxGroup
     packager = "OpenDCT Authors"
+    maintainer = "OpenDCT Authors"
     url = "https://github.com/enternoescape/opendct"
 
     os = LINUX
     type = BINARY
+
+    configurationFile = "/etc/opendct/conf/opendct.properties"
+
+    from('src/main/resources') {
+        include 'opendct.properties'
+        fileType CONFIG | NOREPLACE
+        into '/etc/opendct/conf'
+    }
 
     into linuxInstallPath
 
@@ -178,12 +187,6 @@ ospackage {
     from('src/main/resources') {
         include 'log4j2.xml'
         into 'lib'
-    }
-
-    from('src/main/resources') {
-        include 'opendct.properties'
-        fileType CONFIG | NOREPLACE
-        into 'conf'
     }
 
     from('build/jsw') {
@@ -353,7 +356,7 @@ def packageWin(String arch) {
     }
 }
 
-task packageWin32(dependsOn:  buildWin32) << {
+task packageWin32(dependsOn: buildWin32) << {
     println 'Creating install package for Windows 32-bit...'
 
     changeJsw('windows-x86', 'windows_x86')
@@ -368,7 +371,7 @@ task packageWin32(dependsOn:  buildWin32) << {
     packageWin('x86')
 }
 
-task packageWin64(dependsOn:  buildWin64) << {
+task packageWin64(dependsOn: buildWin64) << {
     println 'Creating install package for Windows 64-bit...'
 
     changeJsw('windows-x86_64', 'windows_x86_64')
@@ -383,134 +386,146 @@ task packageWin64(dependsOn:  buildWin64) << {
     packageWin('x64')
 }
 
-task packageLinux32(dependsOn: buildLinux32) << {
-    println 'Creating install packages for Linux 32-bit...'
-
+task jswLinux32() << {
     changeJsw('linux-x86', 'linux_x86')
-
-    task buildRpm32(type: Rpm) {
-        arch = I386
-
-        from("scripts/rpm/systemd") {
-            include "opendct.service"
-            into "/etc/systemd/system"
-            fileMode = 0664
-            addParentDirs = false
-            user = "root"
-            permissionGroup = "root"
-            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
-        }
-
-        from('scripts/rpm/firewalld') {
-            include 'opendct.xml'
-            into '/etc/firewalld/services'
-            fileMode = 0640
-            addParentDirs = false
-            user = "root"
-            permissionGroup = "root"
-            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
-        }
-
-        into linuxInstallPath
-
-        from(configurations.linux_x86) {
-            into 'lib'
-        }
-
-        preInstall file('scripts/rpm/preInstall.sh')
-        postInstall file('scripts/rpm/postInstall.sh')
-        preUninstall file('scripts/rpm/preUninstall.sh')
-        postUninstall file('scripts/rpm/postUninstall.sh')
-    }
-
-    task buildDeb32(type: Deb) {
-        arch = I386
-
-        into linuxInstallPath
-
-        from(configurations.linux_x86) {
-            into 'lib'
-        }
-
-        from('scripts/deb/ufw') {
-            into ''
-            fileMode 0755
-            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
-        }
-
-        preInstall file('scripts/deb/preInstall.sh')
-        postInstall file('scripts/deb/postInstall.sh')
-        preUninstall file('scripts/deb/preUninstall.sh')
-        postUninstall file('scripts/deb/postUninstall.sh')
-    }
-
-    tasks.buildRpm32.execute();
-    tasks.buildDeb32.execute();
 }
 
-task packageLinux64(dependsOn: buildLinux64) << {
-    println 'Creating install packages for Linux 64-bit...'
+task packageRpm32(type: Rpm) {
+    dependsOn buildLinux32
+    dependsOn jswLinux32
 
+    arch = I386
+
+    from("scripts/rpm/systemd") {
+        include "opendct.service"
+        into "/usr/lib/systemd/system"
+        fileMode = 0664
+        addParentDirs = false
+        user = "root"
+        permissionGroup = "root"
+        filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
+    }
+
+    from('scripts/rpm/firewalld') {
+        include 'opendct.xml'
+        into '/etc/firewalld/services'
+        fileMode = 0640
+        addParentDirs = false
+        user = "root"
+        permissionGroup = "root"
+        filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
+    }
+
+    into linuxInstallPath
+
+    from(configurations.linux_x86) {
+        into 'lib'
+    }
+
+    preInstall file('scripts/rpm/preInstall.sh')
+    postInstall file('scripts/rpm/postInstall.sh')
+    preUninstall file('scripts/rpm/preUninstall.sh')
+    postUninstall file('scripts/rpm/postUninstall.sh')
+}
+
+task packageDeb32(type: Deb) {
+    dependsOn buildLinux32
+    dependsOn jswLinux32
+
+    arch = I386
+
+    into linuxInstallPath
+
+    from(configurations.linux_x86) {
+        into 'lib'
+    }
+
+    from('scripts/deb/ufw') {
+        into ''
+        fileMode 0755
+        filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
+    }
+
+    preInstall file('scripts/deb/preInstall.sh')
+    postInstall file('scripts/deb/postInstall.sh')
+    preUninstall file('scripts/deb/preUninstall.sh')
+    postUninstall file('scripts/deb/postUninstall.sh')
+}
+
+task packageLinux32() {
+    dependsOn packageRpm32
+    dependsOn packageDeb32
+}
+
+task jswLinux64() << {
     changeJsw('linux-x86_64', 'linux_x86_64')
+}
 
-    task buildRpm64(type: Rpm) {
-        arch = X86_64
+task packageRpm64(type: Rpm) {
+    dependsOn buildLinux64
+    dependsOn jswLinux64
 
-        from("scripts/rpm/systemd") {
-            include "opendct.service"
-            into "/usr/lib/systemd/system"
-            fileMode = 0664
-            addParentDirs = false
-            user = "root"
-            permissionGroup = "root"
-            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
-        }
+    arch = X86_64
 
-        from('scripts/rpm/firewalld') {
-            include 'opendct.xml'
-            into '/etc/firewalld/services'
-            fileMode = 0640
-            addParentDirs = false
-            user = "root"
-            permissionGroup = "root"
-            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
-        }
-
-        into linuxInstallPath
-
-        from(configurations.linux_x86_64) {
-            into 'lib'
-        }
-
-        preInstall file('scripts/rpm/preInstall.sh')
-        postInstall file('scripts/rpm/postInstall.sh')
-        preUninstall file('scripts/rpm/preUninstall.sh')
-        postUninstall file('scripts/rpm/postUninstall.sh')
+    from("scripts/rpm/systemd") {
+        include "opendct.service"
+        into "/usr/lib/systemd/system"
+        fileMode = 0664
+        addParentDirs = false
+        user = "root"
+        permissionGroup = "root"
+        filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
     }
 
-    task buildDeb64(type: Deb) {
-        arch = "amd64"
-
-        into linuxInstallPath
-
-        from(configurations.linux_x86_64) {
-            into 'lib'
-        }
-
-        from('scripts/deb/ufw') {
-            into ''
-            fileMode 0755
-            filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
-        }
-
-        preInstall file('scripts/deb/preInstall.sh')
-        postInstall file('scripts/deb/postInstall.sh')
-        preUninstall file('scripts/deb/preUninstall.sh')
-        postUninstall file('scripts/deb/postUninstall.sh')
+    from('scripts/rpm/firewalld') {
+        include 'opendct.xml'
+        into '/etc/firewalld/services'
+        fileMode = 0640
+        addParentDirs = false
+        user = "root"
+        permissionGroup = "root"
+        filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
     }
 
-    tasks.buildRpm64.execute();
-    tasks.buildDeb64.execute();
+    into linuxInstallPath
+
+    from(configurations.linux_x86_64) {
+        into 'lib'
+    }
+
+    preInstall file('scripts/rpm/preInstall.sh')
+    postInstall file('scripts/rpm/postInstall.sh')
+    preUninstall file('scripts/rpm/preUninstall.sh')
+    postUninstall file('scripts/rpm/postUninstall.sh')
+}
+
+task packageDeb64(type: Deb) {
+    dependsOn buildLinux64
+    dependsOn jswLinux64
+
+    arch = "amd64"
+
+    into linuxInstallPath
+
+    from(configurations.linux_x86_64) {
+        into 'lib'
+    }
+
+    from('scripts/deb/ufw') {
+        into ''
+        fileMode 0755
+        filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
+    }
+
+    preInstall file('scripts/deb/preInstall.sh')
+    postInstall file('scripts/deb/postInstall.sh')
+    preUninstall file('scripts/deb/preUninstall.sh')
+    postUninstall file('scripts/deb/postUninstall.sh')
+}
+
+task packageLinux64() {
+    dependsOn packageRpm64
+    dependsOn packageDeb64
 }
 
 task buildAll() {
