Enabled configuration reload on restart to support future automatic/requested upgrades via the web interface.

--- a/jsw/linux-x86/conf/wrapper.conf
+++ b/jsw/linux-x86/conf/wrapper.conf
@@ -211,3 +211,5 @@ wrapper.on_exit.2=SHUTDOWN
 wrapper.on_exit.3=SHUTDOWN
 wrapper.on_exit.4=SHUTDOWN
 wrapper.on_exit.6=SHUTDOWN
+
+wrapper.restart.reload_configuration=TRUE
