Updated to include commonly changed properties by default.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -1,8 +1,37 @@
 #OpenDCT Configuration File
+channels.qam.automap_reference_lookup=true
+channels.qam.automap_tuning_lookup=false
+channels.update=true
+discovery.exp_enabled=false
+hdhr.always_tune_legacy=false
+hdhr.discoverer_enabled=true
+hdhr.qam.automap_reference_lookup=true
+hdhr.qam.automap_tuning_lookup=false
+pm.enabled=true
+pm.network.resume_timeout_ms=120000
+pm.network.start_retry=120
+pool.enabled=false
+producer.rtp.nio.native_udp_receive_buffer=5312000
 sagetv.device.global.ignore_devices_csv=
 sagetv.device.global.only_devices_csv=
 sagetv.device.global.required_devices_loaded_count=0
 sagetv.device.global.required_devices_loaded_timeout_ms=30000
 sagetv.new.default_consumer_impl=opendct.consumer.FFmpegSageTVConsumerImpl
+sagetv.early_port_assignment=false
+sagetv.new.device.default_encoder_merit=0
+sagetv.new.device.default_tuning_delay=0
+sagetv.new.device.increment_port=false
+sagetv.new.device.socket_server_port_high=9100
+sagetv.new.device.socket_server_port_low=9001
+sagetv.new.device.socket_server_shared_port=9000
+sagetv.use_automatic_loopback=true
+upnp.dct.fast_tuning=false
+upnp.dct.hdhr_tuning=true
+upnp.dct.http_tuning=true
+upnp.new.device.schema_filter_strings_csv=schemas-cetoncorp-com,schemas-dkeystone-com
+upnp.new.device.search_strings_csv=schemas-cetoncorp-com,schemas-dkeystone-com
+upnp.qam.automap_reference_lookup=true
+upnp.qam.automap_tuning_lookup=false
+upnp.service.configuration.http_listen_port=8501
 upnp.service.configuration.ignore_interfaces_csv=
 upnp.service.configuration.ignore_local_ip_csv=
