First run handling so we don't create a backup of a configuration that has never been used.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -35,3 +35,4 @@ upnp.qam.automap_tuning_lookup=false
 upnp.service.configuration.http_listen_port=8501
 upnp.service.configuration.ignore_interfaces_csv=
 upnp.service.configuration.ignore_local_ip_csv=
+version.first_run=true
