Added url tuning support for HDHomeRun devices that support it.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -3,8 +3,10 @@ channels.qam.automap_reference_lookup=true
 channels.qam.automap_tuning_lookup=false
 channels.update=true
 discovery.exp_enabled=false
+hdhr.allow_http_tuning=true
 hdhr.always_tune_legacy=false
 hdhr.discoverer_enabled=true
+hdhr.extend_transcode_profile=
 hdhr.qam.automap_reference_lookup=true
 hdhr.qam.automap_tuning_lookup=false
 pm.enabled=true
