Turned into example of what's possible with the current configuration.

--- a/transcode/profile_example.properties
+++ b/transcode/profile_example.properties
@@ -45,18 +45,21 @@ v.conf.t.deinterlace_detect=true
 # same format.
 v.conf.t.always=false
 
-# This is the default video codec to be used for all video encoding.
-v.conf.e.default.codec=h264
+# This is the default video codec to be used for all video encoding. Note that the encoder is
+# referred to as 'libx264' when it is retrieved by name because that is how FFmpeg names to the
+# codec. However, settings are referred to as 'h264' because the codec refers that is what the codec
+# returns as its name.
+v.conf.e.default.codec=libx264
 
 # A codec can be mapped to another codec so that if for example you want all mpeg2video to be
-# converted to h264, you can uncomment the line below. When this option is defined, transcoding will
-# happen regardless of other options whenever the video format is in this example mpeg2video.
-#v.conf.t.codec_map.mpeg2video=h264
+# converted to H.264, you can uncomment the line below. When this option is defined, transcoding
+# will happen regardless of other options whenever the video format is in this example mpeg2video.
+#v.conf.t.codec_map.mpeg2video=libx264
 
 # A codec can be transcoded to a preferred codec. QuickSync is not available yet, but this is
 # how you would tell the program to use the alternate codec. 'd' is decoding. 'e' is encoding.
-#v.conf.d.codec_map.h264=qsv_h264
-#v.conf.e.codec_map.h264=qsv_h264
+#v.conf.d.codec_map.h264=qsvenc_h264
+#v.conf.e.codec_map.h264=qsvenc_h264
 
 #===================================================================================================
 # These are the default options for encoding to h264. dict.values are codec specific options.
@@ -72,7 +75,7 @@ v.e.default.h264.dict.level=4.1
 v.e.default.h264.dict.preset=veryfast
 
 # Allowed: film, animation, grain, stillimage, psnr, ssim, fastdecode, zerolatency
-v.e.default.h264.dict.tune=fastdecode,zerolatency
+#v.e.default.h264.dict.tune=fastdecode,zerolatency
 
 # 23 is the h264 default. Increase this number for speed (max 51). Decrease it for quality (min 0).
 v.e.default.h264.dict.crf=18
@@ -84,11 +87,10 @@ v.e.default.h264.dict.crf=18
 # codec.
 v.e.default.h264.dict.qcomp=0.60
 
-# Uncomment the line below to limit the bitrate.
-#v.e.default.bit_rate=6400000
+# Average bitrate.
+v.e.default.bit_rate=3200000
 
-# The following 4 settings must be set or the codec will complain.
-# motion estimation comparison function
+# The following 4 settings must be set or the h264 codec will complain.
 v.e.default.h264.me_cmp=1
 v.e.default.h264.me_range=16
 v.e.default.h264.qmin=0
@@ -106,81 +108,60 @@ v.e.default.h264.dict.lookahead_threads=1
 v.e.default.h264.dict.sliced_threads=0
 
 #===================================================================================================
-# These are other settings available. The value here is not necessarily the default. You may need to
-# refer to AVCodecContext to figure out if you really want to configure them or not. Not all codecs
-# will do anything with these settings. If there's a description, it's what is in the code.
+# These are all of the settings available. The value here is not necessarily the default. You may
+# need to refer to AVCodecContext to figure out if you really want to configure them or not. Not all
+# codecs will do anything with these settings. The description is from FFmpeg doxygen. If you see
+# an AVCodecContext variable missing that you would like to be able to set, ask for it to be added.
 #===================================================================================================
-# maximum bitrate
+# Maximum bitrate.
 #v.e.default.h264.rc_max_rate
-# minimum bitrate
+
+# Minimum bitrate.
 #v.e.default.h264.rc_min_rate
-#v.e.default.h264.b_frame_strategy
-# qscale factor between IP and B-frames If > 0 then the last P-frame quantizer will be used (q= lastp_q*factor+offset). If < 0 then normal ratecontrol will be done (q= -normal_q*factor+offset).
-#v.e.default.h264.b_quant_factor
-# qscale offset between IP and B-frames
-#v.e.default.h264.b_quant_offset
-# Adjust sensitivity of b_frame_strategy 1.
-#v.e.default.h264.b_sensitivity
-#v.e.default.h264.bidir_refine
-# number of bits the bitstream is allowed to diverge from the reference. the reference can be CBR (for CBR pass1) or VBR (for pass2). Unused for constant quantizer encoding.
-#v.e.default.h264.bit_rate_tolerance
-# ME diamond size & shape
-#v.e.default.h264.dia_size
-# error concealment flags
-#v.e.default.h264.error_concealment
-# frame skip comparison function
-#v.e.default.h264.frame_skip_cmp
-#v.e.default.h264.frame_skip_exp
-#v.e.default.h264.frame_skip_factor
-#v.e.default.h264.frame_skip_threshold
-# the number of pictures in a group of pictures, or 0 for intra_only
+
+# Motion estimation comparison function.
+#v.e.default.h264.me_cmp
+
+# Maximum motion estimation search range in subpel units If 0 then no limit.
+#v.e.default.h264.me_range
+
+# Minimum quantizer.
+#v.e.default.h264.qmin
+
+# Maximum quantizer.
+#v.e.default.h264.qmax
+
+# The number of pictures in a group of pictures, or 0 for intra_only.
 #v.e.default.h264.gop_size
-# qscale factor between P and I-frames If > 0 then the last p frame quantizer will be used (q= lastp_q*factor+offset). If < 0 then normal ratecontrol will be done (q= -normal_q*factor+offset).
-#v.e.default.h264.i_quant_factor
-# qscale offset between P and I-frames
-#v.e.default.h264.i_quant_offset
-# IDCT algorithm
-#v.e.default.h264.idct_algo
-# interlaced DCT comparison function
-#v.e.default.h264.ildct_cmp
-# precision of the intra DC coefficient - 8
-#v.e.default.h264.intra_dc_precision
-# minimum GOP size
-#v.e.default.h264.keyint_min
-# maximum number of B-frames between non-B-frames Note: The output will be delayed by max_b_frames+1 relative to the input.
-#v.e.default.h264.max_b_frames
-# maximum quantizer difference between frames
-#v.e.default.h264.max_qdiff
-# macroblock decision mode
-#v.e.default.h264.mb_decision
-# maximum MB lagrange multipler
-#v.e.default.h264.mb_lmax
-# minimum MB lagrange multipler
-#v.e.default.h264.mb_lmin
-# motion estimation prepass comparison function
-#v.e.default.h264.me_pre_cmp
-# Maximum motion estimation search range in subpel units. If 0 then no limit.
-#v.e.default.h264.noise_reduction
-# scene change detection threshold 0 is default, larger means fewer detected scene changes.
-#v.e.default.h264.scenechange_threshold
-# trellis RD quantization
+
+# Trellis RD quantization.
 #v.e.default.h264.trellis
+
+# Maximum number of B-frames between non-B-frames Note: The output will be delayed by max_b_frames+1
+# relative to the input.
+#v.e.default.h264.max_b_frames
 
 #===================================================================================================
 # These are the default filter graph options for encoding to h264.
 #===================================================================================================
 # This filter is used if the content is determined to be interlaced. Since frame doubling is
 # enabled, every frame must be deinterlaced or the video might have a variable frame rate. Special
-# characters such as backslash (\) must be escaped (\\) in this file.
-v.e.default.h264.deinterlace_filter=yadif=mode=3, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bilinear, format=pix_fmts=yuv420p
+# characters such as backslash (\) must be escaped (\\) in this file. opendct_dfps gets converted to
+# double the input source framerate. This "hack" is needed or the output file will report that the
+# stream is quadruple the original frame rate due to the input time base code. It is more efficient
+# to let the filter graph handle this than to code the scaling on the Java side.
+v.e.default.h264.deinterlace_filter=yadif=mode=3, mcdeint=mode=fast, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bilinear, format=pix_fmts=yuv420p, fps=fps=opendct_dfps:round=near
 
-# This filer is used if the content is determined to be progressive.
-v.e.default.h264.progressive_filter=scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bilinear, format=pix_fmts=yuv420p
+# This filer is used if the content is determined to be progressive. opendct_fps gets converted to
+# the input source framerate. This "hack" is needed or the output file may report that the stream is
+# quadruple the original frame rate due to the input time base code. It is more efficient to let the
+# filter graph handle this than to code the scaling on the Java side.
+v.e.default.h264.progressive_filter=scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bilinear, format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
 
 # This filter is used for any 720p content. 'default' is an alias for 'w*.h*' The left to right most
 # specific setting always wins if there is a conflict.
-# Ex. w1280.h* and w1280.h720 would override w*.h720
-v.e.w*.h720.h264.progressive_filter=format=pix_fmts=yuv420p
+# Ex. w1280.h720 > w1280.h* > w*.h720
+v.e.w1280.h720.h264.progressive_filter=fps=fps=opendct_fps:round=near, format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
 
-# This filter disables frame doubling for 1080i content so only 30 FPS needs to be processed.
-v.e.w*.h1080.h264.deinterlace_filter=yadif=mode=2:deint=interlaced, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bilinear, format=pix_fmts=yuv420p
+# This filter disables frame doubling for 1080i content so only 29.97 FPS needs to be processed.
+v.e.w*.h1080.h264.deinterlace_filter=yadif=mode=0, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bilinear, format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
