--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -19,6 +19,7 @@ sagetv.device.global.only_devices_csv=
 sagetv.device.global.required_devices_loaded_count=0
 sagetv.device.global.required_devices_loaded_timeout_ms=30000
 sagetv.new.default_consumer_impl=opendct.consumer.FFmpegSageTVConsumerImpl
+sagetv.new.default_transcode_profile=
 sagetv.early_port_assignment=false
 sagetv.new.device.default_encoder_merit=0
 sagetv.new.device.default_tuning_delay=0
