--- a/transcode/ultrafast720p.properties
+++ b/transcode/ultrafast720p.properties
@@ -19,7 +19,7 @@
 # If you want to make your own changes, make a copy of this file and edit the copy.
 #===================================================================================================
 
-# OpenDCT Live Transcoding Example Profile for High Performance Computers
+# OpenDCT Live Transcoding Profile
 
 # Set this to true to always reload these properties when this transcoding profile is requested.
 # Alternatively these properties are only loaded once.
@@ -27,28 +27,12 @@ g.conf.always_reload=false
 
 # This is the profile name to be displayed. When referencing this profile in opendct.properties, use
 # the name of this file without the .properties extension.
-g.conf.friendly_name=Profile Example
-g.conf.description=Example profile for computers with high performance.
+g.conf.friendly_name=Ultra High Speed
+g.conf.description=The fastest tested settings with content scaling to 720p.
 
 # Change this value to true to disable transcoding on all capture devices using this profile. This
 # effectively will cause all video streams to be copied instead.
 g.conf.disable=false
-
-# There are some rules used to determine when transcoding is to be used. This is the order in which
-# they are interpreted.
-# 1) If the total of the in progress transcoding weights plus this transcoding weight is less than
-#    or equal to the value of consumer.ffmpeg.transcode_limit => Continue
-# 2) If g.conf.disable=true => Remux
-# 3) If v.conf.t.always=true => Transcode
-# 4) If v.conf.t.transcode_gt_h < video height and v.conf.t.transcode_gt_w < video width => Continue
-# 5) If v.conf.t.codec_map.mpeg2video=libx264 and the source is mpeg2 => Transcode
-# 6) If v.conf.t.deinterlace_only=true => Transcode
-
-# If this is set, transcoding can only happen when the video is greater than this height.
-#v.conf.t.allow_gt_h=720
-
-# If this is set, transcoding can only happen when the video is greater than this width.
-#v.conf.t.allow_gt_w=1280
 
 # If this is true, transcoding will only happen if the content is interlaced.
 v.conf.t.deinterlace_only=true
@@ -89,10 +73,9 @@ v.e.default.h264.dict.profile=high
 v.e.default.h264.dict.level=4.1
 
 # Allowed: ultrafast, superfast, veryfast, faster, fast, medium, slow, slower, veryslow, placebo
-v.e.default.h264.dict.preset=veryfast
+v.e.default.h264.dict.preset=ultrafast
 
 # Allowed: film, animation, grain, stillimage, psnr, ssim, fastdecode, zerolatency
-# fastdecode and zerolatency are recommended for smoother transitions during SWITCH.
 #v.e.default.h264.dict.tune=fastdecode,zerolatency
 
 # 23 is the h264 default. Increase this number for speed (max 51). Decrease it for quality (min 0).
@@ -106,7 +89,7 @@ v.e.default.h264.dict.crf=18
 v.e.default.h264.dict.qcomp=0.60
 
 # Average bitrate.
-v.e.default.bit_rate=3200000
+v.e.default.bit_rate=6400000
 
 # The following 4 settings must be set or the h264 codec will complain.
 v.e.default.h264.me_cmp=1
@@ -114,8 +97,7 @@ v.e.default.h264.me_range=16
 v.e.default.h264.qmin=0
 v.e.default.h264.qmax=69
 
-# This how special parameters are passed to libx264. This one enforces a constant framerate. Check
-# https://ffmpeg.org/doxygen/2.8/libx264_8c_source.html#l00816 for other dictionary options.
+# This how special parameters are passed to libx264. This one enforces a constant framerate.
 v.e.default.h264.dict.x264-params=force-cfr=1
 
 # Two threads is more than enough for one transcoding. Reasons to not use more threads:
@@ -136,10 +118,10 @@ v.e.default.h264.dict.sliced_threads=0
 # an AVCodecContext variable missing that you would like to be able to set, ask for it to be added.
 #===================================================================================================
 # Maximum bitrate.
-#v.e.default.h264.rc_max_rate=3200000
+#v.e.default.h264.rc_max_rate
 
 # Minimum bitrate.
-#v.e.default.h264.rc_min_rate=3200000
+#v.e.default.h264.rc_min_rate
 
 # Motion estimation comparison function.
 #v.e.default.h264.me_cmp
@@ -166,36 +148,17 @@ v.e.default.h264.dict.sliced_threads=0
 #===================================================================================================
 # These are the default filter graph options for encoding to h264.
 #===================================================================================================
-# This filter is used if the content is determined to be interlaced. Since frame doubling is
-# enabled, every frame must be deinterlaced or the video might have a variable frame rate. Special
-# characters such as backslash (\) must be escaped (\\) in this file. opendct_dfps gets converted to
-# double the input source framerate. This "hack" is needed or the output file will report that the
-# stream is quadruple the original frame rate due to the input time base code. It is more efficient
-# to let the filter graph handle this than to code the scaling on the Java side.
-v.e.default.h264.deinterlace_filter=yadif=mode=2, mcdeint=mode=fast, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bilinear, format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
+v.e.default.h264.deinterlace_filter=yadif=mode=1, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bicubic, format=pix_fmts=yuv420p, fps=fps=opendct_dfps:round=near
 
-# This filer is used if the content is determined to be progressive. opendct_fps gets converted to
-# the input source framerate. This "hack" is needed or the output file may report that the stream is
-# quadruple the original frame rate due to the input time base code. It is more efficient to let the
-# filter graph handle this than to code the scaling on the Java side.
-v.e.default.h264.progressive_filter=scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bilinear, format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
+v.e.default.h264.progressive_filter=scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bicubic, format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
 
-# This filter is used for any 720p content. 'default' is an alias for 'w*.h*' The left to right most
-# specific setting always wins if there is a conflict.
-# Ex. w1280.h720 > w1280.h* > w*.h720
 v.e.w1280.h720.h264.progressive_filter=format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
 
-# This filter disables frame doubling for 1080i content so only 29.97 FPS needs to be processed.
-v.e.w1920.h1080.h264.deinterlace_filter=yadif=mode=0, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bilinear, format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
+v.e.w1920.h1080.h264.deinterlace_filter=yadif=mode=1, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bicubic, format=pix_fmts=yuv420p
 
 #===================================================================================================
 # These are the weights for encoding.
 #===================================================================================================
 
-# All h264 video has a weight of 2 by default. If this value is not set, the program will set it for
-# you with a warning in the logs.
 v.e.default.h264.encode_weight=2
-
-# All incoming video with a height of 480 typically uses less than half of the resources needed for
-# 1080p30 ot 720p60.
 v.e.w*.h480.h264.encode_weight=1
